--- a/index.html
+++ b/index.html
@@ -9,8 +9,37 @@
 
     <body>
         <div class="container">
-            <div class="display"></div>
-            <div class="buttons"></div>
+            <div class="display">
+                 ENTER A VALUE
+            </div>
+
+            <div class="buttons">
+
+                <div></div>
+                <div></div>
+                <button id="clear">AC</button>
+                <button id="backspace"><=</button>
+
+                <button id="7">7</button>
+                <button id="8">8</button>
+                <button id="9">9</button>
+                <button id="/">/</button>  
+                
+                <button id="4">4</button>
+                <button id="5">5</button>
+                <button id="6">6</button>  
+                <button id="*">*</button>
+
+                <button id="1">1</button>
+                <button id="2">2</button>
+                <button id="3">3</button>   
+                <button id="-">-</button>
+
+                <button id="equals">=</button>
+                <button id="0">0</button>
+                <button id="decimal">.</button>
+                <button id="+">+</button>
+            </div>
         </div>
     </body>
 </html>
