Clean up code and add comments

--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!----------------------------------------------------------------------------
+Project: Calculator
+Org/Course: The Odin Project
+Related files: javascript.js, style.css, README.md, calculation.txt
+Date Started: July 29, 2022
+Recent Update: January 23, 2023
+----------------------------------------------------------------------------->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -10,7 +18,7 @@
     <body>
         <div class="container">
             <div class="display">
-                 ENTER A VALUE
+                ENTER A VALUE
             </div>
 
             <div class="buttons">
