Handle decimals in mutliplication and handle other decimal operations

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Recent Update: January 23, 2023
 
                 <button id="equals">=</button>
                 <button id="0">0</button>
-                <button id="decimal">.</button>
+                <button id=".">.</button>
                 <button id="+">+</button>
             </div>
         </div>
