--- a/index.html
+++ b/index.html
@@ -16,37 +16,40 @@ Recent Update: January 23, 2023
     </head>
 
     <body>
-        <div class="container">
-            <div class="display">
-                0
-            </div>
+        <div class="bg-container">
+            <div class="container">
+                <div class="display">
+                    0
+                </div>
 
-            <div class="buttons">
+                <div class="buttons">
 
-                <div></div>
-                <div></div>
-                <button id="clear">AC</button>
-                <button id="backspace"><=</button>
+                    <!--Data keys have been added for keyboard functionality but have not been utilized-->
+                    <div></div>
+                    <div></div>
+                    <button data-key = "46" id="clear">AC</button>
+                    <button data-key = "8" id="backspace"><=</button>
 
-                <button id="7">7</button>
-                <button id="8">8</button>
-                <button id="9">9</button>
-                <button id="/">/</button>  
-                
-                <button id="4">4</button>
-                <button id="5">5</button>
-                <button id="6">6</button>  
-                <button id="*">*</button>
+                    <button data-key = "55" id="7">7</button>
+                    <button data-key = "56" id="8">8</button>
+                    <button data-key = "57" id="9">9</button>
+                    <button data-key = "191" id="/">/</button>  
+                    
+                    <button data-key = "52" id="4">4</button>
+                    <button data-key = "53" id="5">5</button>
+                    <button data-key = "54" id="6">6</button>  
+                    <button data-key = "56" id="*">*</button>
 
-                <button id="1">1</button>
-                <button id="2">2</button>
-                <button id="3">3</button>   
-                <button id="-">-</button>
+                    <button data-key = "49" id="1">1</button>
+                    <button data-key = "50" id="2">2</button>
+                    <button data-key = "51" id="3">3</button>   
+                    <button data-key = "189" id="-">-</button>
 
-                <button id="equals">=</button>
-                <button id="0">0</button>
-                <button id=".">.</button>
-                <button id="+">+</button>
+                    <button data-key = "187" id="equals">=</button>
+                    <button data-key = "48" id="0">0</button>
+                    <button data-key = "190" id=".">.</button>
+                    <button data-key = "187" id="+">+</button>
+                </div>
             </div>
         </div>
     </body>
